Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                         },
                         {
                             "title": "برجر",
-                            "ingredients": "صوص بيج برجر + بصل + طماطم + خس + خيار مخلل + شيدر",
+                            "ingredients": "صوص بيج برجر + بصل + طماطم + خس + خيار مخلل",
                             "prices": [
                                 {
                                     "size": "سنجل",
@@ -1015,7 +1015,7 @@
                                     "price": 370
                                 },
                                 {
-                                    "size": "فراخ وكريسبي",
+                                    "size": "فراخ كرسبي",
                                     "price": 335
                                 }
                             ]
@@ -1033,7 +1033,7 @@
                                     "price": 160
                                 },
                                 {
-                                    "size": "فراخ وكريسبي",
+                                    "size": "فراخ كرسبي ",
                                     "price": 140
                                 }
                             ]
@@ -1132,7 +1132,7 @@
                             "prices": [
                                 {
                                     "size": "وجبة",
-                                    "price": 165
+                                    "price": 260
                                 }
                             ]
                         },
@@ -1227,7 +1227,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 195
+                                    "price": 205
                                 }
                             ]
                         },
@@ -1237,7 +1237,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 185
+                                    "price": 195
                                 }
                             ]
                         },
@@ -1247,7 +1247,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 325
+                                    "price": 345
                                 }
                             ]
                         },
@@ -1367,7 +1367,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 235
+                                    "price": 250
                                 }
                             ]
                         }
@@ -1432,7 +1432,7 @@
                             "prices": [
                                 {
                                     "size": "0",
-                                    "price": 235
+                                    "price": 250
                                 }
                             ]
                         },
@@ -1489,6 +1489,99 @@
                                 }, {
                                     "size": "ورك",
                                     "price": 110
+                                }
+                            ]
+                        }
+                    ]
+                },
+                {
+                    "name": "بيتزا",
+                    "items": [
+                        {
+                            "title": "بيتزا شاورما ",
+                            "ingredients": "صلصه + موتزريلا + شاورما  + فلفل + زيتون + طماطم + صوص رانش",
+                            "prices": [
+                                {
+                                    "size": "شاورما فراخ",
+                                    "price": 150
+                                },
+                                {
+                                    "size": "شاورما لحمه",
+                                    "price": 170
+                                }
+                            ]
+                        },
+                        {
+                            "title": "بيتزا شاورما اكسترا مشروم",
+                            "ingredients": "توميه + موتزريلا + قطع مشروم + صوص فلفل حلو + خيار مخلل + صوص رانش",
+                            "prices": [
+                                {
+                                    "size": "شاورما فراخ",
+                                    "price": 150
+                                },
+                                {
+                                    "size": "شاورما لحمه",
+                                    "price": 170
+                                }
+                            ]
+                        },
+                        {
+                            "title": "بيتزا شاورما فراخ مانجا",
+                            "ingredients": "صلصله بيتزا + موتزريلا + فلفل + زيتون + طماطم + صوص سويت تشيلي مانجا + صوص رانش",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 160
+                                }
+                            ]
+                        },
+                        {
+                            "title": "بيتزا كرسبي",
+                            "ingredients": "صلصه  + موتزريلا + قطع كرسبي + فلفل + زيتون + طماطم + رومي مدخن + صوص رانش + مايونيز + باربكيو",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 150
+                                }
+                            ]
+                        },
+                        {
+                            "title": "بيتزا فاهيتا",
+                            "ingredients": "صلصه + موتزريلا + فاهيتا بالخضار + فلفل + طماطم + مايونيز + باربكيو + صوص رانش + رومي مدخن",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 130
+                                }
+                            ]
+                        },
+                        {
+                            "title": "بيتزا ميكس  فراخ ",
+                            "ingredients": "صلصه + موتزريلا+ قطع كرسبي + شاورما فراخ + فلفل + زيتون + طماطم + مايونيز + رانش + باربكيو + رومي مدخن",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 160
+                                }
+                            ]
+                        },
+                        {
+                            "title": "بيتزا قطع دجاج",
+                            "ingredients": "صلصه + موتزريلا + قطع فراخ علي جريل + فلفل + زيتون + طماطم + مايونيز + رانش + باربكيو + رومي مدخن",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 150
+                                }
+                            ]
+                        },
+                        {
+                            "title": "بيتزا ميكس لحوم",
+                            "ingredients": "صلصه + موتزريلا + بسطرمه + سجق + سوسيس + بيبروني + فلفل + زيتون + طماطم + مايونيز + رانش + رومي مدخن",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 160
                                 }
                             ]
                         }
@@ -1696,6 +1789,3 @@
 </body>
 
 </html>
-
-
-
