Update ingredients for صينية مكس الماريا
Removed one large garlic sauce from the ingredients list.

--- a/2.html
+++ b/2.html
@@ -1293,7 +1293,7 @@
                         },
                         {
                             "title": "صينية مكس الماريا",
-                            "ingredients": "٣ مثلثات ماريا فراخ + ٣ مثلثات ماريا لحم + ٣ قطع كرسبي + ٣ قطع بروستد + بطاطس + تومية كبيرة",
+                            "ingredients": "٣ مثلثات ماريا فراخ + ٣ مثلثات ماريا لحم + ٣ قطع كرسبي + ٣ قطع بروستد + بطاطس",
                             "prices": [
                                 {
                                     "size": "صينية",
