Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -349,6 +349,100 @@
 
         const menuData = {
             "categories": [
+            {
+                    "name": "العروض",
+                    "items": [
+                        {
+                            "title": "ملوك التنين (1)",
+                            "ingredients": "1 تنين شاورما فراخ + 1 تنين كريسبي",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 240
+                                }
+                            ]
+                        },
+                        {
+                            "title": "ملوك التنين (2)",
+                            "ingredients": "1 تنين شاورما فراخ + 1 تنين شاورما لحمه",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 250
+                                }
+                            ]
+                        },
+                        {
+                            "title": "ملوك التنين (3)",
+                            "ingredients": "3 تنين شاورما فراخ",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 240
+                                }
+                            ]
+                        },
+                        {
+                            "title": "دلع كرشك (1)",
+                            "ingredients": "ربع فرخه شوايه + قطعه كريسبي + رز + بطاطس + توميه + مخلل",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 130
+                                }
+                            ]
+                        },{
+                            "title": "دلع كرشك (2)",
+                            "ingredients": "ربع فرخه شوايه + قطعه بروستد + رز + بطاطس + توميه + مخلل",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 140
+                                }
+                            ]
+                        },{
+                            "title": "دلع كرشك (3)",
+                            "ingredients": "ربع فرخه شوايه + قطعه ماريا + رز + بطاطس + توميه + مخلل",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 130
+                                }
+                            ]
+                        },
+                        {
+                            "title": "دلع كرشك (4)",
+                            "ingredients": "ربع فرخه شوايه + شرايح شاورما + رز + بطاطس + توميه + مخلل",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 140
+                                }
+                            ]
+                        },
+                        {
+                            "title": "وحوش القرمشه (2)",
+                            "ingredients": "4 قطع بروستد (2 فخد + 2 دبوس) + 1 فته فراخ صغير + 1 فته لحمه صغير + بطاطس + توميه + كلوسلو + 2 كايزر",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 310
+                                }
+                            ]
+                        },
+                        {
+                            "title": "وحوش القرمشه (3)",
+                            "ingredients": "4 قطع بروستد (2 فخد + 2 دبوس) + سندوتش شاورما فراخ سوري XL + سندوتش شاورما لحمه سوري XL + بطاطس + توميه + كلوسلو + 2 كايزر",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 340
+                                }
+                            ]
+                        }
+
+                    ]
+                },
                 {
                     "name": "الماريا (اضافه الموتزريلا 30ج)",
                     "items": [
@@ -1132,7 +1226,7 @@
                             "prices": [
                                 {
                                     "size": "وجبة",
-                                    "price": 260
+                                    "price": 165
                                 }
                             ]
                         },
@@ -1227,7 +1321,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 205
+                                    "price": 225
                                 }
                             ]
                         },
@@ -1237,7 +1331,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 195
+                                    "price": 215
                                 }
                             ]
                         },
@@ -1247,7 +1341,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 345
+                                    "price": 365
                                 }
                             ]
                         },
@@ -1257,7 +1351,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 700
+                                    "price": 730
                                 }
                             ]
                         },
@@ -1267,7 +1361,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 830
+                                    "price": 860
                                 }
                             ]
                         },
@@ -1277,7 +1371,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 680
+                                    "price": 710
                                 }
                             ]
                         },
@@ -1287,7 +1381,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 700
+                                    "price": 750
                                 }
                             ]
                         },
@@ -1297,7 +1391,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 410
+                                    "price": 440
                                 }
                             ]
                         },
@@ -1307,7 +1401,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 430
+                                    "price": 450
                                 }
                             ]
                         },
@@ -1317,7 +1411,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 460
+                                    "price": 510
                                 }
                             ]
                         },
@@ -1327,7 +1421,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 435
+                                    "price": 465
                                 }
                             ]
                         },
@@ -1337,7 +1431,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 400
+                                    "price": 430
                                 }
                             ]
                         },
@@ -1347,7 +1441,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 380
+                                    "price": 430
                                 }
                             ]
                         },
@@ -1357,7 +1451,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 450
+                                    "price": 500
                                 }
                             ]
                         },
@@ -1367,7 +1461,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 250
+                                    "price": 280
                                 }
                             ]
                         }
@@ -1432,7 +1526,7 @@
                             "prices": [
                                 {
                                     "size": "0",
-                                    "price": 250
+                                    "price": 280
                                 }
                             ]
                         },
