--- a/2.html
+++ b/2.html
@@ -353,73 +353,104 @@
                     "name": "العروض",
                     "items": [
                         {
-                            "title": "ملوك التنين (1)",
-                            "ingredients": "1 تنين شاورما فراخ + 1 تنين كريسبي",
+                            "title": "اون فاير (1)",
+                            "ingredients": "ربع فرخه + سيخ كفته لحم + رز + بطاطس + توميه ",
                             "prices": [
                                 {
-                                    "size": "0",
-                                    "price": 240
+                                    "size": "صدر",
+                                    "price": 170
+                                },
+                                {
+                                    "size": "ورك",
+                                    "price": 155
+                                }
+                            ]
+                        },
+                                            {
+                            "title": "اون فاير (2)",
+                            "ingredients": "ربع فرخه + سيخ شيش طاوك + رز + بطاطس + توميه ",
+                            "prices": [
+                                {
+                                    "size": "صدر",
+                                    "price": 170
+                                },
+                                {
+                                    "size": "ورك",
+                                    "price": 155
+                                }
+                            ]
+                        },
+                      {
+                            "title": "اون فاير (3)",
+                            "ingredients": "ربع فرخه + سيخ كفته لحم + رز + بطاطس + توميه ",
+                            "prices": [
+                                {
+                                    "size": "صدر",
+                                    "price": 170
+                                },
+                                {
+                                    "size": "ورك",
+                                    "price": 155
                                 }
                             ]
                         },
                         {
-                            "title": "ملوك التنين (2)",
-                            "ingredients": "1 تنين شاورما فراخ + 1 تنين شاورما لحمه",
+                            "title": "اون فاير (4)",
+                            "ingredients": "سيخ كفته لحم + سيخ شيش طاوك + رز + بطاطس + توميه ",
                             "prices": [
                                 {
                                     "size": "0",
-                                    "price": 250
-                                }
-                            ]
-                        },
-                        {
-                            "title": "ملوك التنين (3)",
-                            "ingredients": "3 تنين شاورما فراخ",
-                            "prices": [
-                                {
-                                    "size": "0",
-                                    "price": 310
-                                }
-                            ]
-                        },
-                        {
-                            "title": "دلع كرشك (1)",
-                            "ingredients": "ربع فرخه شوايه + قطعه كريسبي + رز + بطاطس + توميه + مخلل",
-                            "prices": [
-                                {
-                                    "size": "0",
-                                    "price": 130
+                                    "price": 140
                                 }
                             ]
                         },{
-                            "title": "دلع كرشك (2)",
+                            "title": "الكينج",
+                            "ingredients": "ربع فرخه شوايه + 3 قطع عربي فراخ + رز + بطاطس + توميه + مخلل",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 160
+                                }
+                            ]
+                        },{
+                            "title": "اصحاب الارض",
+                            "ingredients": "ربع فرخه شوايه +2  قطعه ماريا ميكس + رز + بطاطس + توميه + مخلل",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 170
+                                }
+                            ]
+                        },
+                        {
+                            "title": "علي كلاي",
                             "ingredients": "ربع فرخه شوايه + قطعه بروستد + رز + بطاطس + توميه + مخلل",
                             "prices": [
                                 {
                                     "size": "0",
-                                    "price": 140
+                                    "price": 185
                                 }
                             ]
                         },{
-                            "title": "دلع كرشك (3)",
-                            "ingredients": "ربع فرخه شوايه + قطعه ماريا + رز + بطاطس + توميه + مخلل",
+                            "title": "النص التاني",
+                            "ingredients": "2 قطعه بروستد + 3 قطع عربي فراخ + رز + بطاطس + توميه + مخلل",
                             "prices": [
                                 {
                                     "size": "0",
-                                    "price": 130
+                                    "price": 170
                                 }
                             ]
-                        },
-                        {
-                            "title": "دلع كرشك (4)",
-                            "ingredients": "ربع فرخه شوايه + شرايح شاورما + رز + بطاطس + توميه + مخلل",
+                        },{
+                            "title": "صينيه الهديه الكرم",
+                            "ingredients": "ربع فرخه + قطعه بروستد + قطعه كريسبي + 3 قطع عربي فراخ + 3 قطع عربي + 2 مثلث ماريا + رز + توميه + مخلل",
                             "prices": [
                                 {
                                     "size": "0",
-                                    "price": 140
+                                    "price": 170
                                 }
                             ]
                         },
+
                         {
                             "title": "وحوش القرمشه (2)",
                             "ingredients": "4 قطع بروستد (2 فخد + 2 دبوس) + 1 فته فراخ صغير + 1 فته لحمه صغير + بطاطس + توميه + كلوسلو + 2 كايزر",
@@ -440,7 +471,6 @@
                                 }
                             ]
                         }
-
                     ]
                 },
                 {
@@ -1316,36 +1346,6 @@
                     "name": "الصواني",
                     "items": [
                         {
-                            "title": "صينية الاكيله (1) *",
-                            "ingredients": "2 ورك مشوي تكا + 200 جم شاورما فراخ + رز",
-                            "prices": [
-                                {
-                                    "size": "صينية",
-                                    "price": 225
-                                }
-                            ]
-                        },
-                        {
-                            "title": "صينية الاكيله (3) *",
-                            "ingredients": "2 سيخ شيش طاووق + 120 جم شاورما + رز",
-                            "prices": [
-                                {
-                                    "size": "صينية",
-                                    "price": 215
-                                }
-                            ]
-                        },
-                        {
-                            "title": "صينية الاكيله (4) *",
-                            "ingredients": "2 ورك مشوي تكا + 2 سيخ شيش + 2 كفتة + رز",
-                            "prices": [
-                                {
-                                    "size": "صينية",
-                                    "price": 365
-                                }
-                            ]
-                        },
-                        {
                             "title": "صينية الأبطال",
                             "ingredients": "½ فرخة شواية + 750 جم شاورما فراخ + كيلو رز + بطاطس",
                             "prices": [
@@ -1883,4 +1883,3 @@
 </body>
 
 </html>
-
