Update ingredients for علي كلاي dish

--- a/2.html
+++ b/2.html
@@ -424,7 +424,7 @@
                         },
                         {
                             "title": "علي كلاي",
-                            "ingredients": "ربع فرخه شوايه + قطعه بروستد + رز + بطاطس + توميه + مخلل",
+                            "ingredients": "ربع فرخه شوايه + قطعه بروستد + قطعه كريسبي + رز + بطاطس + توميه + مخلل",
                             "prices": [
                                 {
                                     "size": "0",
@@ -1883,3 +1883,5 @@
 </body>
 
 </html>
+
+
