Update ingredients for 'اون فاير (3)'

--- a/2.html
+++ b/2.html
@@ -382,7 +382,7 @@
                         },
                       {
                             "title": "اون فاير (3)",
-                            "ingredients": "ربع فرخه + سيخ كفته لحم + رز + بطاطس + توميه ",
+                            "ingredients": "ربع فرخه + ½ سيخ كفته لحم + ½ سيخ شيش + رز + بطاطس + توميه ",
                             "prices": [
                                 {
                                     "size": "صدر",
