Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                             ]
                         },{
                             "title": "صينيه الهديه الكرم",
-                            "ingredients": "ربع فرخه + قطعه بروستد + قطعه كريسبي + 3 قطع عربي فراخ + 3 قطع عربي + 2 مثلث ماريا + رز + توميه + مخلل",
+                            "ingredients": "ربع فرخه + قطعه بروستد + قطعه كريسبي + 3 قطع عربي فراخ + 2 مثلث ماريا + رز + توميه + مخلل",
                             "prices": [
                                 {
                                     "size": "0",
@@ -1883,6 +1883,7 @@
 </body>
 
 </html>
+
 
 
 
